--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Mellisafe: análise de qualidade e segurança do mel vegano caseiro</title>
 </head>
 <body>
     <h1 class="titulo">Mellisafe: análise de qualidade e segurança do mel vegano caseiro</h1>
+    <h2 class="subtitulo">Autor: Douglas da Silva Raixz 
+                        Orientadora: Dionéia Schauren
+    </h2>
 </body>
 </html>
