--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 class="titulo">Mellisafe: análise de qualidade e segurança do mel vegano caseiro</h1>
-    <h2 class="subtitulo">Autor: Douglas da Silva Raixz 
-                        Orientadora: Dionéia Schauren
-    </h2>
+    <h2 class="subtitulo">Autor: Douglas da Silva Raixz</h2>
+    <h2 class="subtitulo">Orientadora: Dionéia Schauren</h2>
+    <h2 class="subtitulo">Coorientador: Leandro Marcelo Miglioretto</h2>
+    <h2 class="subtitulo">Instituição: Colégio Estadual Jardim Porto Alegre - Clube de Ciências Cientistas do Jardim</h2>
 </body>
 </html>
