--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ hidroximetilfurfural, substância tóxica que se forma através da hidrólise da
 </p>
 <p>Palavras - chave: Açúcar invertido; Hidroximetilfurfural; Veganismo.</p>
     </section>
+    <section class="rodape">
+        <h2 class="finalizacao">Mais sobre o Clube de Ciência</h2>
+        <a href="instagram">https://www.instagram.com/cdc_cienciasjpa?utm_source=qr&igsh=ZWxzazd3cWpsZXB1</a>
+    </section>
 </body>
 
 </html>
